--- a/CSS/LogInDesign.css
+++ b/CSS/LogInDesign.css
@@ -1,12 +1,16 @@
+/*RootElements*/
+
 .CenteredField{
     position: absolute;
     background-color: white;
-    margin: 250px 800px;
+    margin: 10% 40%;
     width: 300px;
     height: 250px;
     border-radius: 20px;
     border: 5px solid gray
 }
+
+/*Html Elements*/
 
 .SubmitButtonStlye{
     width: 150px;
@@ -30,15 +34,53 @@
     border-radius: 5px;
     height: 25px;
     color: gray;
+    padding-left: 5px;
 }
 
 .UsernameBoxStyle:focus{
-    padding-left: 5px;
     color: black;
 }
 
+.CreateNewAccountDiv{
+    visibility: hidden;
+    position: absolute;
+    margin: 7.5% 40%;
+    background-color: transparent;
+    width: 0px;
+    height: 0px;
+    transition: width 0.4s, height 0.7s;
+    transform:translateX(0%);
+}
+
+.CreateNewAccountDivOpen {
+    visibility: visible;
+    transform:translateX(0%);
+    background: rgb(0, 217, 255);
+    width: 300px;
+    height: 350px;
+    border-radius: 20px;
+    border: 5px solid gray;
+    transition: width 0.4s, height 0.7s;
+    transform:translateX(0%);
+}
+
+.Closing {
+    visibility: visible;
+    position: absolute;
+    margin: 10% 40%;
+    border: 1px solid black;
+    background-color: rgb(0, 217, 255);
+    width: 0px;
+    height: 0px;
+}
+
+/*Margins*/
 .LeftMargin25{
     margin-left: 25px;
+}
+
+.LeftMargin50{
+    margin-left: 50px;
 }
 
 .TopMargin30{
