--- a/CSS/LogInDesign.css
+++ b/CSS/LogInDesign.css
@@ -1,4 +1,16 @@
 /*RootElements*/
+.MainStyle{
+    background-image: url("../Ressources/poly.png") ;
+    position: fixed;
+    background-size: 100% 100%;
+}
+
+.Headline{
+    margin-top: 30px;
+    color: white;
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 .CenteredField{
     position: absolute;
@@ -7,11 +19,10 @@
     width: 300px;
     height: 250px;
     border-radius: 20px;
-    border: 5px solid gray
+    border: 5px solid gray;
 }
 
 /*Html Elements*/
-
 .SubmitButtonStlye{
     width: 150px;
 }
@@ -42,9 +53,8 @@
 }
 
 .CreateNewAccountDiv{
-    visibility: hidden;
     position: absolute;
-    margin: 7.5% 40%;
+    margin: 5% 40%;
     background-color: transparent;
     width: 0px;
     height: 0px;
@@ -53,9 +63,8 @@
 }
 
 .CreateNewAccountDivOpen {
-    visibility: visible;
     transform:translateX(0%);
-    background: rgb(0, 217, 255);
+    background: white;
     width: 300px;
     height: 350px;
     border-radius: 20px;
@@ -65,7 +74,6 @@
 }
 
 .Closing {
-    visibility: visible;
     position: absolute;
     margin: 10% 40%;
     border: 1px solid black;
